# cpp-assignments

./: .gitignore  1.cpp  2.cpp  3.cpp  README.md  bishop.cpp  chess.cpp  fibo.cpp  main.cpp  percent.cpp  queen.cpp  random.cpp  sortRandomList.cpp
30.10/: 2.cpp  deque.cpp  stack.cpp  vector.cpp
chess/: horse.cpp
classwork/06.11/: 1.cpp  2.cpp
classwork/13.11/: main.cpp
classwork/2024.11/13.11/: main.cpp
classwork/2024.11/21.11 - find/: find.cpp
classwork/2024.11/lambda/: main.cpp  test.cpp
classwork/2024.11/struct/: 28.11.cpp  struct.cpp
classwork/2024.12/class, headers/: class.cpp  class.hpp  overload ().cpp
classwork/2024.12/fstream/: fstream.cpp  math.cpp  out.txt  test.cpp
classwork/2024.12/fstream/txt's/: in.txt  ivanov.txt  pass.txt  petrov.txt
classwork/2024.12/operators overload/: out.txt  rats.cpp
classwork/2024.12/template/: main.cpp
classwork/2024.12/threading/: thread.cpp
classwork/2025.01/class/: 22.01 class.cpp  27.01 class methods.cpp  class.cpp
classwork/2025.01/math/: chess.cpp  main.cpp
classwork/2025.01/skill check/: test.cpp  test2.cpp
classwork/2025.01/static/: static.cpp
classwork/2025.02/fstream/: fstream.cpp  input1.txt  input2.txt  input3.txt  output1.txt
classwork/2025.02/linked list/: list  list.cpp  test.cpp
classwork/2025.02/my vector/: main.cpp
classwork/2025.02/my vector/fun/: fun.cpp  fun.h
classwork/2025.02/virtual/: dog.cpp
classwork/2025.03/fstream showcase/: logins.txt  main.cpp
classwork/2025.03/smart pointers/: shared.cpp
classwork/2025.03/std containers/: map.cpp
classwork/2025.03/stl containers/: import.ixx  main.cpp  map.cpp
classwork/2025.03/thread/: main.cpp
classwork/2025.04/thread/: file.txt  main.cpp
classwork/2025.12/skill check/: test2.cpp
classwork/21.11/: find.cpp  tasks.cpp
classwork/30.10/: queue.cpp
classwork/dinosaur era/30.10/: 1.cpp  hardcore mega difficult functions.cpp
classwork/dinosaur era/strings/: 3.cpp
classwork/strings/: 2.cpp
classwork/struct/: 28.11.cpp
classwork/vectors/: 1.cpp  test.cpp
homework/: 01.12 homework.cpp  07.12 homework.cpp  15.11 homework.cpp  23.10 homework.cpp  23.11 homework.cpp
homework/2024.11/: 15.11 homework.cpp  23.11 homework.cpp
homework/2024.12/: 01.12 homework.cpp  07.12 homework.cpp  08.12 homework.cpp  15.12 homework.cpp  22.12 lab.cpp
homework/2024.12/22.12 lab/: 22.12 keys.txt  22.12 lab.cpp  22.12 msg.txt  decoded.txt  secretkey.txt
homework/2025.01/: 27.01 homework.cpp  27.01.cpp  30.01 homework.cpp  30.01.cpp  31.01 homework.cpp
random/: music.cpp  rofls.cpp  timer.hpp
random/hash/: hashGenerator.cpp  sha256.cpp  toHash.hpp
semi-final project/: plan.txt
semi-final project/main/: CMakeLists.txt  main.cpp  res.qrc
semi-final project/main/forms/: finalpage.ui  infobar.ui  loadingscreen.ui  login.ui  register.ui  registerr.ui
semi-final project/main/header/: finalpage.h  infobar.h  loadingscreen.h  login.h  mainwindow.h  registerr.h
semi-final project/main/misc/: clickQLabel.cpp
semi-final project/main/src/: finalpage.cpp  infobar.cpp  loadingscreen.cpp  login.cpp  mainwindow.cpp  registerr.cpp
semi-final project/server/: main.cpp  test.cpp  users.db
semi-final project/server/header/: includes.h  settings.h
semi-final project/server/secret/: cert.pem  csr.pem  key.pem
semi-final project/server/src/: dbContoller.cpp  endpoints.cpp
test 23.10/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
vectors/: 2.cpp  3.cpp  main.cpp
